Add safeguard in CMakeLists.txt to prevent using vectorization on older compilers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -590,6 +590,9 @@ IF (EIGEN3_FOUND)
     MESSAGE(STATUS "Disable vectorization")
     ADD_DEFINITIONS("-DEIGEN_DONT_VECTORIZE -DEIGEN_DONT_ALIGN -DEIGEN_DISABLE_UNALIGNED_ARRAY_ASSERT")
   ELSE (NOT VECTORIZE)
+    IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.2.1 )
+      MESSAGE(FATAL_ERROR "SSE vectorization works since g++ version around 9.2.1.")
+    ENDIF()
     MESSAGE(STATUS "Enable vectorization")
   ENDIF (NOT VECTORIZE)
 
