--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -542,6 +542,13 @@ IF(NOT (${REAL_PRECISION_BITS} EQUAL 64))
   IF(ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW)
     MESSAGE(FATAL_ERROR "Cannot (yet) use ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW with high precision.")
   ENDIF(ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW)
+  IF(ENABLE_POTENTIAL_BLOCKS)
+     MESSAGE(STATUS "ENABLE_POTENTIAL_BLOCKS was disabled because external library coinor can only work with double type.")
+     SET(ENABLE_POTENTIAL_BLOCKS OFF)
+  ENDIF(ENABLE_POTENTIAL_BLOCKS)
+  IF(ENABLE_POTENTIAL_BLOCKS)
+    MESSAGE(FATAL_ERROR "Cannot (yet) use ENABLE_POTENTIAL_BLOCKS with high precision.")
+  ENDIF(ENABLE_POTENTIAL_BLOCKS)
 ENDIF(NOT (${REAL_PRECISION_BITS} EQUAL 64))
 
 IF(${REAL_PRECISION_BITS} GREATER 128)
