Add full test suite (also with ASAN) of high precision up to 150 decimal places.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -195,6 +195,78 @@ make_asan:
     paths:
       - screenshots
 
+make_asan_long_double:
+  <<: *make_definition
+  before_script:
+#    # there can be only one before_script:, so the line below cannot be in a separate template
+#    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE";
+    - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 -DENABLE_ASAN=1 -DREAL_DECIMAL_PLACES=18 $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+    - export ASAN_OPTIONS=detect_leaks=0:log_path=stdout:verify_asan_link_order=false
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  tags:
+    - debug
+  artifacts:
+    when: always
+    paths:
+      - screenshots
+  timeout: 6 hours
+
+make_asan_float128:
+  <<: *make_definition
+  before_script:
+#    # there can be only one before_script:, so the line below cannot be in a separate template
+#    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE";
+    - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 -DENABLE_ASAN=1 -DREAL_DECIMAL_PLACES=33 $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+    - export ASAN_OPTIONS=detect_leaks=0:log_path=stdout:verify_asan_link_order=false
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  tags:
+    - debug
+  artifacts:
+    when: always
+    paths:
+      - screenshots
+  timeout: 6 hours
+
+make_asan_mpfr150:
+  <<: *make_definition
+  before_script:
+#    # there can be only one before_script:, so the line below cannot be in a separate template
+#    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE";
+    - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 -DENABLE_ASAN=1 -DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=ON $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+    - export ASAN_OPTIONS=detect_leaks=0:log_path=stdout:verify_asan_link_order=false
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  tags:
+    - debug
+  artifacts:
+    when: always
+    paths:
+      - screenshots
+  timeout: 6 hours
+
+make_asan_bf150:
+  <<: *make_definition
+  before_script:
+#    # there can be only one before_script:, so the line below cannot be in a separate template
+#    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE";
+    - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 -DENABLE_ASAN=1 -DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=OFF $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+    - export ASAN_OPTIONS=detect_leaks=0:log_path=stdout:verify_asan_link_order=false
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  tags:
+    - debug
+  artifacts:
+    when: always
+    paths:
+      - screenshots
+  timeout: 6 hours
+
 make_minimal:
   <<: *make_definition
   <<: *artifacts_definition
@@ -241,6 +313,50 @@ make_clang:
     # We should escape disabling features for the clang-build. Clang should work exactly like gcc.
     - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 $EXTRA_CMAKE_ARGS"
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+
+makeHP_long_double:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+## Comment this for now, because that is the main reason for this branch.
+##  # there can be only one before_script:, so the line below cannot be in a separate template
+##  - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=18 $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+
+makeHP_float128:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+## Comment this for now, because that is the main reason for this branch.
+##  # there can be only one before_script:, so the line below cannot be in a separate template
+##  - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=33 $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+
+makeHP_mpfr150:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+## Comment this for now, because that is the main reason for this branch.
+##  # there can be only one before_script:, so the line below cannot be in a separate template
+##  - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=ON $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+
+makeHP_bf150:
+  <<: *make_definition
+  <<: *artifacts_definition
+  before_script:
+## Comment this for now, because that is the main reason for this branch.
+##  # there can be only one before_script:, so the line below cannot be in a separate template
+##  - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
+    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=OFF $EXTRA_CMAKE_ARGS"
+    - echo $EXTRA_CMAKE_ARGS
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
 
 make_SSE:
   <<: *make_definition
@@ -396,6 +512,42 @@ test_clang:
     - make_clang
   needs: ["make_clang"]
 
+testHP_long_double:
+  <<: *test_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_long_double
+  needs: ["makeHP_long_double"]
+  timeout: 4 hours
+
+testHP_float128:
+  <<: *test_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_float128
+  needs: ["makeHP_float128"]
+  timeout: 4 hours
+
+testHP_mpfr150:
+  <<: *test_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_mpfr150
+  needs: ["makeHP_mpfr150"]
+  timeout: 4 hours
+
+testHP_bf150:
+  <<: *test_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_bf150
+  needs: ["makeHP_bf150"]
+  timeout: 4 hours
+
 test_SSE:
   <<: *test_definition
   <<: *skip_wip_test_definition
@@ -403,6 +555,7 @@ test_SSE:
   dependencies:
     - make_SSE
   needs: ["make_SSE"]
+
 
 # 3.2. check stage
 .check_template: &check_definition
@@ -514,6 +667,42 @@ check_clang:
     - make_clang
   needs: ["make_clang"]
 
+checkHP_long_double:
+  <<: *check_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_long_double
+  needs: ["makeHP_long_double"]
+  timeout: 4 hours
+
+checkHP_float128:
+  <<: *check_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_float128
+  needs: ["makeHP_float128"]
+  timeout: 4 hours
+
+checkHP_mpfr150:
+  <<: *check_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_mpfr150
+  needs: ["makeHP_mpfr150"]
+  timeout: 4 hours
+
+checkHP_bf150:
+  <<: *check_definition
+##<<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  dependencies:
+    - makeHP_bf150
+  needs: ["makeHP_bf150"]
+  timeout: 8 hours
+
 check_SSE:
   <<: *check_definition
   <<: *skip_wip_test_definition
@@ -521,6 +710,7 @@ check_SSE:
   dependencies:
     - make_SSE
   needs: ["make_SSE"]
+
 
 .doc_template: &doc_definition
   <<: *platforms_definition
