Since MPI hasn't been tested, better to disable it by default. But the compilation works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -549,6 +549,13 @@ IF(NOT (${REAL_PRECISION_BITS} EQUAL 64))
   IF(ENABLE_POTENTIAL_BLOCKS)
     MESSAGE(FATAL_ERROR "Cannot (yet) use ENABLE_POTENTIAL_BLOCKS with high precision.")
   ENDIF(ENABLE_POTENTIAL_BLOCKS)
+  IF(ENABLE_MPI)
+     MESSAGE(STATUS "ENABLE_MPI was disabled because it hasn't been tested. It is possible that a pure python-only library will correctly send mpmath.mpf(…) high precision Real type over network, but this was not tested.")
+     SET(ENABLE_MPI OFF)
+  ENDIF(ENABLE_MPI)
+  IF(ENABLE_MPI)
+    MESSAGE(FATAL_ERROR "Cannot (yet) use ENABLE_MPI with high precision.")
+  ENDIF(ENABLE_MPI)
 ENDIF(NOT (${REAL_PRECISION_BITS} EQUAL 64))
 
 IF(${REAL_PRECISION_BITS} GREATER 128)
