--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,7 +243,7 @@ make_SSE:
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
     - export EXTRA_CMAKE_ARGS="-DVECTORIZE=ON $EXTRA_CMAKE_ARGS"
     - echo $EXTRA_CMAKE_ARGS
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
 # 3.1. test stage
 .test_template: &test_definition
@@ -381,7 +381,7 @@ test_clang:
 test_SSE:
   <<: *test_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
   dependencies:
     - make_SSE
   needs: ["make_SSE"]
@@ -488,7 +488,7 @@ check_clang:
 check_SSE:
   <<: *check_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
   dependencies:
     - make_SSE
   needs: ["make_SSE"]
