Use older C++14 when the compiler is too old.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,11 @@
 
 project(Yade C CXX)
 cmake_minimum_required(VERSION 3.5.0)
-set (CMAKE_CXX_STANDARD 17)
+IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0.0)
+  set (CMAKE_CXX_STANDARD 14)
+ELSE()
+  set (CMAKE_CXX_STANDARD 17)
+ENDIF()
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # https://misc.flogisoft.com/bash/tip_colors_and_formatting
