Add clp and coinutils version detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -741,7 +741,7 @@ IF(ENABLE_POTENTIAL_BLOCKS)
     ADD_DEFINITIONS("-DYADE_POTENTIAL_BLOCKS")
     INCLUDE_DIRECTORIES(${CLP_INCLUDE_DIR} ${CLP2_INCLUDE_DIR} )
     SET(LINKLIBS  "${LINKLIBS};${CLP_LIBRARY};${CLP2_LIBRARY};${CLP3_LIBRARY};${OPENBLAS_LIBRARY};${LAPACK_LIBRARY}")
-    MESSAGE(STATUS "Found CLP")
+    MESSAGE(STATUS "Found CLP version: ${CLP_VERSION}, coinutils version: ${COINUTILS_VERSION}")
     INCLUDE_DIRECTORIES(${BLAS_INCLUDE_DIR})
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} PotentialBlocks")
   ELSE(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
