If coinutils version older than 2.11.3 then fall back to C++14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -749,6 +749,10 @@ IF(ENABLE_POTENTIAL_BLOCKS)
     SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
     SET(ENABLE_POTENTIAL_BLOCKS OFF)
   ENDIF(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
+IF(COINUTILS_VERSION VERSION_LESS 2.11.3)
+  set (CMAKE_CXX_STANDARD 14)
+  MESSAGE(STATUS "${Esc}[91mWARNING: coinutils version older than 2.11.3. Falling back to C++14.${Esc}[0m")
+ENDIF(COINUTILS_VERSION VERSION_LESS 2.11.3)
 ELSE(ENABLE_POTENTIAL_BLOCKS)
   SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
 ENDIF(ENABLE_POTENTIAL_BLOCKS)
