Print C++ standard version after cmake configure step.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -937,6 +937,7 @@ ELSE (DEBUG)
     MESSAGE(STATUS "${Esc}[32mOptimized build${Esc}[0m")
   ENDIF (ENABLE_ASAN)
 ENDIF (DEBUG)
+MESSAGE(STATUS "C++ standard version: ${CMAKE_CXX_STANDARD}")
 IF (CHUNKSIZE)
   MESSAGE(STATUS "CHUNKSIZE is set to " ${CHUNKSIZE})
 ENDIF (CHUNKSIZE)
