Add note in CONFIGURED_FEATS when SSE vectorization is enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -538,7 +538,7 @@ IF(NOT (${REAL_PRECISION_BITS} EQUAL 64))
      SET(ENABLE_TWOPHASEFLOW OFF)
      SET(ENABLE_LINSOLV OFF)
      SET(ENABLE_PFVFLOW OFF)
-  ENDIF(ENABLE_TWOPHASEFLOW)
+  ENDIF(ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW)
   IF(ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW)
     MESSAGE(FATAL_ERROR "Cannot (yet) use ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW with high precision.")
   ENDIF(ENABLE_TWOPHASEFLOW OR ENABLE_LINSOLV OR ENABLE_PFVFLOW)
@@ -594,6 +594,7 @@ IF (EIGEN3_FOUND)
       MESSAGE(FATAL_ERROR "SSE vectorization works since g++ version around 9.2.1.")
     ENDIF()
     MESSAGE(STATUS "Enable vectorization")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} VECTORIZE")
   ENDIF (NOT VECTORIZE)
 
 ENDIF(EIGEN3_FOUND)
