Use dh_numpy3 instead of dh_numpy.
Direct commit into the master. No real source code change.

--- a/scripts/ppa_ci/debian/rules
+++ b/scripts/ppa_ci/debian/rules
@@ -42,7 +42,7 @@ override_dh_auto_install-arch:
 	$(tmpInstall)/usr/bin/yadedaily --check
 	#Delete all pyc files
 	find . -name '*.pyc' -print0 | xargs -0 rm -f
-	dh_numpy
+	dh_numpy3
 
 override_dh_installchangelogs:
 	dh_installchangelogs ChangeLog
