--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,10 +200,23 @@ make_asan_HP:
   before_script:
     # there can be only one before_script:, so the line below cannot be in a separate template
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
-    - export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE";
     # it is expensive to run 5 ASAN tests. So instead run only one, but pick from available decimal places based on the job id.
-    - export TEST_DECIMAL_PLACES=$(case $(( $CI_BUILD_ID % 5 )) in "0") echo "18"  ;; "1") echo "33"  ;; "2") echo "45" ;; "3") echo "150" ;; "4") echo "45"  ;; *) echo "6";; esac)
-    - export TEST_USE_MPFR=$(case       $(( $CI_BUILD_ID % 5 )) in "0") echo "OFF" ;; "1") echo "OFF" ;; "2") echo "ON" ;; "3") echo "ON"  ;; "4") echo "OFF" ;; *) echo "OFF";; esac)
+    - export TEST_DECIMAL_PLACES=$(case $(( $CI_BUILD_ID % 5 )) in
+        "0") echo "18"  ;;
+        "1") echo "33"  ;;
+        "2") echo "45"  ;;
+        "3") echo "150" ;;
+        "4") echo "45"  ;;
+        *)   echo "6"   ;;
+      esac)
+    - export TEST_USE_MPFR=$(case $(( $CI_BUILD_ID % 5 )) in
+        "0") echo "OFF" ;;
+        "1") echo "OFF" ;;
+        "2") echo "ON"  ;;
+        "3") echo "ON"  ;;
+        "4") echo "OFF" ;;
+        *)   echo "OFF" ;;
+        esac)
     - echo "TEST_DECIMAL_PLACES="$TEST_DECIMAL_PLACES
     - echo "TEST_USE_MPFR="$TEST_USE_MPFR
     - export EXTRA_CMAKE_ARGS="-DENABLE_USEFUL_ERRORS=0 -DENABLE_ASAN=1 -DREAL_DECIMAL_PLACES=$TEST_DECIMAL_PLACES -DENABLE_MPFR=$TEST_USE_MPFR $EXTRA_CMAKE_ARGS"
@@ -283,13 +296,13 @@ makeHP_float128:
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-SMALLEST-PATCH-minieigen
 
-makeHP_mpfr45:
+makeHP_mpfr150:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
     # there can be only one before_script:, so the line below cannot be in a separate template
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
-    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=45 -DENABLE_MPFR=ON $EXTRA_CMAKE_ARGS"
+    - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=ON $EXTRA_CMAKE_ARGS"
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-SMALLEST-PATCH-minieigen
 
@@ -474,13 +487,13 @@ testHP_float128:
   needs: ["makeHP_float128"]
   timeout: 4 hours
 
-testHP_mpfr45:
+testHP_mpfr150:
   <<: *test_definition
   <<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-SMALLEST-PATCH-minieigen
   dependencies:
-    - makeHP_mpfr45
-  needs: ["makeHP_mpfr45"]
+    - makeHP_mpfr150
+  needs: ["makeHP_mpfr150"]
   timeout: 4 hours
 
 testHP_bf45:
@@ -628,13 +641,13 @@ checkHP_float128:
   needs: ["makeHP_float128"]
   timeout: 4 hours
 
-checkHP_mpfr45:
+checkHP_mpfr150:
   <<: *check_definition
   <<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-SMALLEST-PATCH-minieigen
   dependencies:
-    - makeHP_mpfr45
-  needs: ["makeHP_mpfr45"]
+    - makeHP_mpfr150
+  needs: ["makeHP_mpfr150"]
   timeout: 4 hours
 
 checkHP_bf45:
