Add cmake option MINIEIGEN_INCLUDE_PATH=…… to allow local minieigen include dirs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -482,9 +482,17 @@ ENDIF()
 IF(NOT ((${REAL_PRECISION_BITS} EQUAL 64)))
 # This means that new high-precision capabilities will be used. To make this work we need a patched version of /usr/include/miniegen
   ADD_DEFINITIONS("-DMINIEIGEN_OVERRIDE")
+  IF(DEFINED MINIEIGEN_INCLUDE_PATH)
+    set(MINIEIGEN_PREFIX_PATH ${MINIEIGEN_INCLUDE_PATH})
+    INCLUDE_DIRECTORIES(${MINIEIGEN_INCLUDE_PATH})
+    MESSAGE(STATUS "Using custom minieigen path " ${MINIEIGEN_PREFIX_PATH})
+  ELSE(DEFINED MINIEIGEN_INCLUDE_PATH)
+    set(MINIEIGEN_PREFIX_PATH /usr/include)
+    MESSAGE(STATUS "Using typical minieigen path " ${MINIEIGEN_PREFIX_PATH})
+  ENDIF(DEFINED MINIEIGEN_INCLUDE_PATH)
   FIND_PACKAGE(MiniEigenOverride REQUIRED)
   IF(NOT MINIEIGENOVERRIDE_FOUND)
-    MESSAGE(FATAL_ERROR "Cannot find python3-minieigen version in /usr/include/miniegen which supports #ifndef MINIEIGEN_OVERRIDE")
+    MESSAGE(FATAL_ERROR "Cannot find python3-minieigen version in /usr/include/miniegen which supports #ifndef MINIEIGEN_OVERRIDE, maybe you need to provide MINIEIGEN_INCLUDE_PATH=… ?")
   ENDIF()
 
   MESSAGE(STATUS "Checking compiler version for ${REAL_PREC_NAME}")
